temp/formation_ckad_ressource_formation/networkpolicies/np-allow.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress
  namespace: foo-ns 
spec:
  podSelector: 
    matchLabels:
      app: foo 
  policyTypes:
  - Ingress  
  ingress: 
    - from:  
        - podSelector:
           matchLabels:
            app: bar
      ports:
        - protocol: TCP
          port: 80
