temp/formation_ckad_ressource_formation/networkpolicies/np-default-deny.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: foo-ns 
spec:
  podSelector: {}
  policyTypes:
  - Ingress
